--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.14",
+    "@types/js-beautify": "^1.13.3",
     "@types/mime": "^3.0.1",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
@@ -12,7 +13,6 @@
     "commander": "^9.4.1",
     "esbuild": "^0.15.13",
     "express": "^4.18.2",
-    "mime": "^3.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
