--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "commander": "^9.4.1",
     "esbuild": "^0.15.13",
     "express": "^4.18.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.0-next-4bd245e9e-20221104",
+    "react-dom": "^18.3.0-next-4bd245e9e-20221104",
     "react-router-dom": "^6.4.3",
     "vite": "^3.2.2"
   }
