--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   },
   "dependencies": {
     "@types/express": "^4.17.14",
-    "@types/js-beautify": "^1.13.3",
-    "@types/mime": "^3.0.1",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
@@ -15,6 +13,7 @@
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.3",
     "vite": "^3.2.2"
   }
 }
