--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,15 @@
 {
     "compilerOptions": {
         "esModuleInterop": true,
+        "isolatedModules": true,
+        "moduleResolution": "node",
         "jsx": "react-jsx",
+        "module": "esnext",
+        "target": "esnext",
         "strict": true,
+        "types": [
+            "vite/client"
+        ],
         "paths": {
             "@grove/*": [
                 "./src/*"
