--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "node": "^18.11.0"
   },
   "dependencies": {
+    "@tanstack/react-location": "^3.7.4",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
@@ -13,7 +14,6 @@
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.3",
     "vite": "^3.2.2"
   }
 }
