--- a/package.json
+++ b/package.json
@@ -1,15 +1,32 @@
 {
+  "name": "@tangerine/kit",
+  "version": "0.0.1",
+  "description": "Tangerine Kit",
+  "type": "module",
+  "bin": {
+    "tank": "dist/cli/index.js"
+  },
+  "files": [
+    "dist/"
+  ],
+  "exports": {
+    ".": "./dist/index.js"
+  },
+  "typings": "dist/index.d.ts",
   "engines": {
     "node": "^18.11.0"
   },
-  "dependencies": {
+  "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
+    "esbuild": "^0.15.13",
+    "typescript": "^4.8.4"
+  },
+  "dependencies": {
     "@vitejs/plugin-react": "^2.2.0",
     "commander": "^9.4.1",
-    "esbuild": "^0.15.13",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
