--- a/package/cms/package.json
+++ b/package/cms/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "@tangerine/kit": "^0.0.1"
+    "@tangerine/kit": "^0.0.1",
+    "autoprefixer": "^10.4.13",
+    "tailwindcss": "^3.2.4"
   }
 }
